--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ line-height: 60px;">
 
 	<!--
     
-force github refresh	
+force github refresh 2	
 	
     The `impress()` function also gives you access to the API that controls the presentation.
     
